--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    file_picker : ^8.1.7
+   # file_picker : ^8.1.7
 
 
   # The following adds the Cupertino Icons font to your application.
