--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-   # file_picker : ^8.1.7
+   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  file_picker : ^8.1.7
 
   mysql1: ^0.19.2
 
