--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   #image_picker: ^1.0.0
   http: ^1.2.2
-  shared_preferences: ^2.0.15
+  #shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
