--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   #image_picker: ^1.0.0
   http: ^1.2.2
+  google_maps_flutter: ^2.10.0
+  location: ^5.0.0
    
 
 
