fix the double image then put in the container name

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,3 +4,9 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    container_name: php-backend
+    ports:
+      - "8080:80"
+    volumes:
+      - .:/var/www/html
+    restart: unless-stopped
