--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ android {
         applicationId = "com.example.othego_project"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk 20
+        minSdkVersion flutter.minSdkVersion
         targetSdk 34
         versionCode = flutter.versionCode
         versionName = flutter.versionName
