--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
   #image_picker: ^1.0.0
-  http: ^1.2.2
-  google_maps_flutter: ^2.10.0
-  location: ^5.0.0
-  carousel_slider: ^5.0.0
+  http: ^1.3.0                  # updated from ^1.2.2
+  google_maps_flutter: ^2.13.0  # updated from ^2.10.0
+  location: ^8.0.1               # updated from ^5.0.0
+  carousel_slider: ^6.0.0        # updated from ^5.0.0
    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8        # remains the same
   
 
-  mysql1: ^0.19.2
+  mysql1: ^0.20.0                # updated from ^0.19.2
 
 dev_dependencies:
   flutter_test:
